[gd_scene load_steps=8 format=3 uid="uid://dh2ukgj61d7gm"]

[ext_resource type="Script" path="res://Assets/Script/Level/Word_Games1.gd" id="1_ct8de"]
[ext_resource type="Script" path="res://Assets/Script/Level/WorldRoot.gd" id="2_beq02"]
[ext_resource type="PackedScene" uid="uid://w8tfinbfyqkd" path="res://Assets/Scences/Player/Player.tscn" id="3_swar0"]
[ext_resource type="PackedScene" uid="uid://7rxo4e7m6443" path="res://Assets/Scences/Level/main_menu_level.tscn" id="4_utoke"]
[ext_resource type="PackedScene" uid="uid://c1ph53byo1unb" path="res://Assets/Scences/UI/Game_Play/GUI_Play.tscn" id="5_k23sw"]
[ext_resource type="PackedScene" uid="uid://pd5jheoce1lf" path="res://Assets/Scences/UI/Pause Menu/Pause_Menu.tscn" id="6_g1xfh"]
[ext_resource type="Script" path="res://Assets/Script/Controller/Save/Save_Data/player/save_file.gd" id="7_3fx2h"]

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_ct8de")

[node name="UI2" type="CanvasLayer" parent="."]

[node name="GuiPlay" parent="UI2" instance=ExtResource("5_k23sw")]
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="UI2" instance=ExtResource("6_g1xfh")]
unique_name_in_owner = true
visible = false

[node name="utility" type="Node" parent="."]

[node name="SaveLoadManagerFile" type="Node" parent="utility"]
unique_name_in_owner = true
script = ExtResource("7_3fx2h")

[node name="WorldRoot" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 1
script = ExtResource("2_beq02")

[node name="Main_Menu_Level" parent="WorldRoot" groups=["level"] instance=ExtResource("4_utoke")]

[node name="Player" parent="WorldRoot" groups=["world_root_no_touch"] instance=ExtResource("3_swar0")]
unique_name_in_owner = true

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="exit_reached" from="WorldRoot/Main_Menu_Level" to="WorldRoot" method="_on_level_exit_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
